OO-3303: Fix cropped slider in rubric editor

--- a/src/main/webapp/static/themes/light/modules/_evaluation_form.scss
+++ b/src/main/webapp/static/themes/light/modules/_evaluation_form.scss
@@ -14,6 +14,11 @@
 			align-self: flex-end;
 		}
 	}
+ 
+	.o_slider_wrapper {
+		height: 33px;
+		overflow: hidden;
+	}
 	
 	.o_slider {
 		margin-bottom: $o-evaluation-slider-margin-bottom;
