--- a/src/main/webapp/static/themes/light/modules/_thirdparty.scss
+++ b/src/main/webapp/static/themes/light/modules/_thirdparty.scss
@@ -106,12 +106,6 @@
 /*
  * slider
  */
- 
-.o_slider_wrapper {
-	height: 33px;
-	overflow: hidden;
-}
-
 .ui-slider.ui-slider-horizontal.ui-widget-content {
 	border-color: $o-slider-border;
 	background: $o-slider-background;
